# spatial-lineage-learning

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/base/: data.yaml  eval.yaml  inference.yaml  model.yaml  runtime.yaml  train.yaml
configs/datasets/: mock_small.yaml  visium_lineage.yaml  xenium_clone_map.yaml
configs/experiments/eval/: exp001_eval_holdout.yaml  mock_demo_eval.yaml
configs/experiments/inference/: exp001_predict_new_slide.yaml  mock_demo_infer.yaml
configs/experiments/train/: exp001_st_ln_transformer.yaml  mock_demo.yaml
configs/schemas/: eval_schema.yaml  inference_schema.yaml  train_schema.yaml
configs/tasks/: lineage_classification.yaml  multi_task.yaml  trajectory_regression.yaml
scripts/: eval.py  infer.py  train.py
src/spatial_lineage/: __init__.py
src/spatial_lineage/api/: __init__.py  build_eval_job.py  build_inference_job.py  build_train_job.py
src/spatial_lineage/commands/: common.py  eval.py  infer.py  train.py
src/spatial_lineage/experimental/: __init__.py
src/spatial_lineage/experimental/evaluators/: __init__.py  spatial_coherence.py  trajectory_alignment.py
src/spatial_lineage/experimental/feature_builders/: __init__.py  lineage_graph.py  neighborhood_pooling.py  spatial_graph.py
src/spatial_lineage/stable/: __init__.py
tests/: helpers.py
tests/experimental/: test_lineage_losses.py  test_st_transformer.py
tests/stable/: test_config.py  test_eval_engine.py  test_inference_engine.py  test_registry.py  test_training_engine.py
tools/: freeze_config.py  inspect_checkpoint.py  summarize_predictions.py
(+51 files in other folders)
