[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-lineage-learning"
version = "0.2.0"
description = "Config-driven training infrastructure for spatial transcriptomics and lineage tracing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "PyYAML>=6.0",
]
keywords = ["spatial-transcriptomics", "lineage-tracing", "machine-learning", "training"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]
data = [
  "anndata>=0.10",
  "pandas>=2.0",
  "pyarrow>=14.0",
]

[project.scripts]
spatial-lineage-train = "spatial_lineage.commands.train:main"
spatial-lineage-eval = "spatial_lineage.commands.eval:main"
spatial-lineage-infer = "spatial_lineage.commands.infer:main"

[project.urls]
Homepage = "https://github.com/taozhu2026/spatial-lineage-learning"
Repository = "https://github.com/taozhu2026/spatial-lineage-learning.git"
Issues = "https://github.com/taozhu2026/spatial-lineage-learning/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
